prost-unwrap-proto-tests/tests/ui/with_suffix_invalid_ident.stderr
error: Parameter argument must be an ident literal, e.g. `Suffix`
  --> tests/ui/with_suffix_invalid_ident.rs:12:18
   |
12 |     .with_suffix("Sane"));
   |                  ^^^^^^
